centermanifest.yaml/servicedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentapp-db-svc
  labels:
    app: studentapp
spec:
  selector:
    app: studentapp-db
  ports:
  - port: 3306
    targetPort: 3306
